--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ numpy = "^1.22.3"
 matplotlib = "^3.5.1"
 tensorflow-cpu = "^2.8.0"
 scikit-learn = "1.0.2"
+keras-tuner = "1.1.2"
+scikit-multilearn = "0.2.0"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
