--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ torchvision = "0.11.3"
 pandas = "^1.4.1"
 numpy = "^1.22.3"
 matplotlib = "^3.5.1"
-tensorflow-cpu = "^2.8.0"
+tensorflow-cpu = "2.7.1"
 scikit-learn = "1.0.2"
 keras-tuner = "1.1.2"
 scikit-multilearn = "0.2.0"
