--- a/android/client/local.properties
+++ b/android/client/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 01 10:27:43 BRT 2022
-sdk.dir=/home/amparomunoz/Android/Sdk
+#Tue Apr 05 14:06:02 BRT 2022
+sdk.dir=C\:\\Users\\daniel.miranda\\AppData\\Local\\Android\\Sdk
