--- a/android/client/app/build.gradle
+++ b/android/client/app/build.gradle
@@ -41,6 +41,9 @@ android {
         textReport true
         textOutput "stdout"
     }
+    buildFeatures {
+        mlModelBinding true
+    }
 }
 
 protobuf {
@@ -66,6 +69,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
